//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Project {
  id String [pk]
  name String [not null]
  description String [not null]
  image String
  priority String [not null, default: 'low']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  tasks Task [not null]
  userId String
  user users
}

Table Task {
  id Int [pk, increment]
  title String
  description String
  status String [not null, default: 'in progress']
  priority String [not null]
  deadline String [not null]
  projectId String [not null]
  project Project [not null]
  columnId ColumnEnum [not null, default: 'todo']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table users {
  id String [pk]
  name String
  username String
  firstName String
  lastName String
  password String
  email String [unique]
  emailVerified DateTime
  image String
  accounts accounts [not null]
  sessions sessions [not null]
  projects Project [not null]
}

Table accounts {
  id String [pk]
  userId String [not null]
  type String [not null]
  provider String [not null]
  providerAccountId String [not null]
  refresh_token String
  access_token String
  expires_at Int
  token_type String
  scope String
  id_token String
  session_state String
  user users [not null]

  indexes {
    (provider, providerAccountId) [unique]
  }
}

Table sessions {
  id String [pk]
  sessionToken String [unique, not null]
  userId String [not null]
  expires DateTime [not null]
  user users [not null]
}

Enum ColumnEnum {
  todo
  in_progress
  done
}

Ref: Project.userId > users.id [delete: Cascade]

Ref: Task.projectId > Project.id [delete: Cascade]

Ref: accounts.userId > users.id [delete: Cascade]

Ref: sessions.userId > users.id [delete: Cascade]